# zipm

./: CMakeLists.txt  Kconfig  README.rst
.github/workflows/: ci.yml
doc/: zipm_concepts.rst
dts/bindings/: zipm-message-device.yaml  zipm-node-pool.yaml  zipm-shared-queue.yml
include/zipm/: zipm.h  zipm_device_interface.h  zipm_platform_backend.h
include/zipm/util/: ul_list.h  ul_util.h
samples/ping-pong/: README.rst
samples/ping-pong/rx/: CMakeLists.txt  prj.conf
samples/ping-pong/rx/boards/: arduino_giga_r1_stm32h747xx_m4.conf  arduino_giga_r1_stm32h747xx_m4.overlay  esp32s3_devkitm_appcpu.conf  esp32s3_devkitm_appcpu.overlay  thingy53_nrf5340_cpunet.overlay
samples/ping-pong/rx/src/: main.c
samples/ping-pong/tx/: CMakeLists.txt  prj.conf
samples/ping-pong/tx/boards/: arduino_giga_r1_stm32h747xx_m7.conf  arduino_giga_r1_stm32h747xx_m7.overlay  esp32s3_devkitm_procpu.conf  esp32s3_devkitm_procpu.overlay  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
samples/ping-pong/tx/src/: main.c  zephyr.c
src/: zipm.c  zipm_backend_zephyr.c  zipm_node.h  zipm_node_pool.c  zipm_node_pool.h  zipm_shared_queue.c  zipm_shared_queue.h
src/core/: zephyr_list_oot.h  zipm_core_portable.h  zipm_node.h  zipm_node_pool.c  zipm_node_pool.h  zipm_shared_queue.c  zipm_shared_queue.h
tests/: CMakeLists.txt  prj.conf
tests/boards/: mps2_an521_cpu0.overlay
tests/src/: main.c
